--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ lazy_static = "1.4"
 smallvec = "1.6"
 ndarray = "0.15"
 smallstr = "0.2"
-onnxruntime = {git="https://git.aidev.ru/andrey/onnxruntime-rs.git", branch="v1.10", optional = true}
+rustacuda = { version = "0.1", optional = true }
+onnxruntime = { version = "0.1", git = "https://git.aidev.ru/andrey/onnxruntime-rs.git", optional = true }
 
 [features]
 default = ["ort-backend"]
