--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ ndarray = "0.13"
 arrayvec = "0.5"
 smallstr = "0.2"
 
-rustacuda = {version = "0.1", optional = true}
-onnxruntime = {version="0.1", git="https://git.aidev.ru/andrey/onnxruntime-rs.git", optional = true}
+rustacuda = { version = "0.1", optional = true }
+onnxruntime = { version = "0.1", git = "https://github.com/shakacode/onnxruntime-rs", optional = true }
 
 [features]
 default = ["ort-backend"]
