--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ ndarray = "0.15"
 smallstr = "0.2"
 
 rustacuda = { version = "0.1", optional = true }
-onnxruntime = { version = "0.1", git = "https://github.com/shakacode/onnxruntime-rs", optional = true }
+onnxruntime = { version = "0.1", git = "https://github.com/shakacode/onnxruntime-rs", optional = true, branch = "v1.10" }
 
 [features]
 default = ["ort-backend"]
